wrongly pushed old jupyter file xdd

--- a/netflix.ipynb
+++ b/netflix.ipynb
@@ -133,117 +133,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "   title           director  \\\n",
-       "0   7:19  Jorge Michel Grau   \n",
-       "1  23:59       Gilbert Chan   \n",
-       "2      9        Shane Acker   \n",
-       "3     21     Robert Luketic   \n",
-       "4    122    Yasir Al Yasiri   \n",
-       "\n",
-       "                                                cast        country rating  \\\n",
-       "0  Demián Bichir, Héctor Bonilla, Oscar Serrano, ...         Mexico  TV-MA   \n",
-       "1  Tedd Chan, Stella Chung, Henley Hii, Lawrence ...      Singapore      R   \n",
-       "2  Elijah Wood, John C. Reilly, Jennifer Connelly...  United States  PG-13   \n",
-       "3  Jim Sturgess, Kevin Spacey, Kate Bosworth, Aar...  United States  PG-13   \n",
-       "4  Amina Khalil, Ahmed Dawood, Tarek Lotfy, Ahmed...          Egypt  TV-MA   \n",
-       "\n",
-       "                                           listed_in  \\\n",
-       "0                       Dramas, International Movies   \n",
-       "1                Horror Movies, International Movies   \n",
-       "2  Action & Adventure, Independent Movies, Sci-Fi...   \n",
-       "3                                             Dramas   \n",
-       "4                Horror Movies, International Movies   \n",
-       "\n",
-       "                                         description  \n",
-       "0  After a devastating earthquake hits Mexico Cit...  \n",
-       "1  When an army recruit is found dead, his fellow...  \n",
-       "2  In a postapocalyptic world, rag-doll robots hi...  \n",
-       "3  A brilliant group of students become card-coun...  \n",
-       "4  After an awful accident, a couple admitted to ...  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>director</th>\n      <th>cast</th>\n      <th>country</th>\n      <th>rating</th>\n      <th>listed_in</th>\n      <th>description</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>7:19</td>\n      <td>Jorge Michel Grau</td>\n      <td>Demián Bichir, Héctor Bonilla, Oscar Serrano, ...</td>\n      <td>Mexico</td>\n      <td>TV-MA</td>\n      <td>Dramas, International Movies</td>\n      <td>After a devastating earthquake hits Mexico Cit...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>23:59</td>\n      <td>Gilbert Chan</td>\n      <td>Tedd Chan, Stella Chung, Henley Hii, Lawrence ...</td>\n      <td>Singapore</td>\n      <td>R</td>\n      <td>Horror Movies, International Movies</td>\n      <td>When an army recruit is found dead, his fellow...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>9</td>\n      <td>Shane Acker</td>\n      <td>Elijah Wood, John C. Reilly, Jennifer Connelly...</td>\n      <td>United States</td>\n      <td>PG-13</td>\n      <td>Action &amp; Adventure, Independent Movies, Sci-Fi...</td>\n      <td>In a postapocalyptic world, rag-doll robots hi...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>21</td>\n      <td>Robert Luketic</td>\n      <td>Jim Sturgess, Kevin Spacey, Kate Bosworth, Aar...</td>\n      <td>United States</td>\n      <td>PG-13</td>\n      <td>Dramas</td>\n      <td>A brilliant group of students become card-coun...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>122</td>\n      <td>Yasir Al Yasiri</td>\n      <td>Amina Khalil, Ahmed Dawood, Tarek Lotfy, Ahmed...</td>\n      <td>Egypt</td>\n      <td>TV-MA</td>\n      <td>Horror Movies, International Movies</td>\n      <td>After an awful accident, a couple admitted to ...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 29
-    }
-   ],
-   "source": [
-    "movies = data[data['type'] == 'Movie'].reset_index()\n",
-    "movies = movies.drop(['index', 'show_id', 'type', 'date_added', 'release_year', 'duration'], axis=1)\n",
-    "\n",
-    "movies.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "             title       director  \\\n",
-       "0               46    Serdar Akar   \n",
-       "1        7 (Seven)    Nizar Shafi   \n",
-       "2  A Queen Is Born   Carla Barros   \n",
-       "3         A.I.C.O.  Kazuya Murata   \n",
-       "4     Abby Hatcher    Kyran Kelly   \n",
-       "\n",
-       "                                                cast                country  \\\n",
-       "0  Erdal Beşikçioğlu, Yasemin Allen, Melis Birkan...                 Turkey   \n",
-       "1  Rahman, Havish, Regina Cassandra, Nandita Swet...                  India   \n",
-       "2                      Gloria Groove, Alexia Twister                 Brazil   \n",
-       "3  Haruka Shiraishi, Yusuke Kobayashi, Makoto Fur...                  Japan   \n",
-       "4  Macy Drouin, Wyatt White, Paul Sun-Hyung Lee, ...  United States, Canada   \n",
-       "\n",
-       "  rating                                        listed_in  \\\n",
-       "0  TV-MA  International TV Shows, TV Dramas, TV Mysteries   \n",
-       "1  TV-14                                         TV Shows   \n",
-       "2  TV-14               International TV Shows, Reality TV   \n",
-       "3  TV-14             Anime Series, International TV Shows   \n",
-       "4   TV-Y                                         Kids' TV   \n",
-       "\n",
-       "                                         description  \n",
-       "0  A genetics professor experiments with a treatm...  \n",
-       "1  Multiple women report their husbands as missin...  \n",
-       "2  Gloria Groove and Alexia Twister make drag dre...  \n",
-       "3  Everything Aiko knew was a lie. Now she's join...  \n",
-       "4  A big-hearted girl helps her Fuzzly friends wh...  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>director</th>\n      <th>cast</th>\n      <th>country</th>\n      <th>rating</th>\n      <th>listed_in</th>\n      <th>description</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>46</td>\n      <td>Serdar Akar</td>\n      <td>Erdal Beşikçioğlu, Yasemin Allen, Melis Birkan...</td>\n      <td>Turkey</td>\n      <td>TV-MA</td>\n      <td>International TV Shows, TV Dramas, TV Mysteries</td>\n      <td>A genetics professor experiments with a treatm...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>7 (Seven)</td>\n      <td>Nizar Shafi</td>\n      <td>Rahman, Havish, Regina Cassandra, Nandita Swet...</td>\n      <td>India</td>\n      <td>TV-14</td>\n      <td>TV Shows</td>\n      <td>Multiple women report their husbands as missin...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>A Queen Is Born</td>\n      <td>Carla Barros</td>\n      <td>Gloria Groove, Alexia Twister</td>\n      <td>Brazil</td>\n      <td>TV-14</td>\n      <td>International TV Shows, Reality TV</td>\n      <td>Gloria Groove and Alexia Twister make drag dre...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>A.I.C.O.</td>\n      <td>Kazuya Murata</td>\n      <td>Haruka Shiraishi, Yusuke Kobayashi, Makoto Fur...</td>\n      <td>Japan</td>\n      <td>TV-14</td>\n      <td>Anime Series, International TV Shows</td>\n      <td>Everything Aiko knew was a lie. Now she's join...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Abby Hatcher</td>\n      <td>Kyran Kelly</td>\n      <td>Macy Drouin, Wyatt White, Paul Sun-Hyung Lee, ...</td>\n      <td>United States, Canada</td>\n      <td>TV-Y</td>\n      <td>Kids' TV</td>\n      <td>A big-hearted girl helps her Fuzzly friends wh...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 30
-    }
-   ],
-   "source": [
-    "tv = data[data['type'] == 'TV Show'].reset_index()\n",
-    "tv = tv.drop(['index', 'show_id', 'type', 'date_added', 'release_year', 'duration'], axis=1)\n",
-    "\n",
-    "tv.head()\n",
-    "for i,row in tv.iterrows():\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -336,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -377,32 +266,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "7787\n",
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f= len(count_matrix)\n",
     "print(f)\n",
     "t = AnnoyIndex(68313, 'angular')\n",
     "for i in range(f):\n",
     "    t.add_item(i,count_matrix[i])\n",
-    "t.build(50,n_jobs=-1)\n",
-    "t.save('annoy.ann')\n",
+    "t.build(100,n_jobs=-1)\n",
+    "t.save('annoy100.ann')\n",
     "print(\"done\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,37 +293,37 @@
     "    print(idx)\n",
     "    # Get the pairwsie similarity scores of all movies with that movie\n",
     "    u = AnnoyIndex(68313, 'angular')\n",
-    "    u.load('annoy.ann') # super fast, will just mmap the file\n",
+    "    u.load('annoy100.ann') # super fast, will just mmap the file\n",
     "    similar=u.get_nns_by_item(idx, 10)\n",
     "    return netflix['title'].iloc[similar]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "4872\n",
-      "4872                              PK\n",
-      "371     Alarmoty in the Land of Fire\n",
-      "5386                    Santo Cachón\n",
-      "2571                          Haapus\n",
-      "6596            The Light of My Eyes\n",
-      "52              100 Days Of Solitude\n",
-      "208                 A new Capitalism\n",
-      "311                           Adhugo\n",
-      "328                   After the Raid\n",
-      "955             Black Man White Skin\n",
+      "1089\n",
+      "1089                           Breaking Bad\n",
+      "858                        Better Call Saul\n",
+      "6096    The Assassination of Gianni Versace\n",
+      "4716                                  Ozark\n",
+      "6140                          The Blacklist\n",
+      "1608                                Dare Me\n",
+      "1711                    Designated Survivor\n",
+      "6607           The Lizzie Borden Chronicles\n",
+      "7360                               Unsolved\n",
+      "3289                              Kakegurui\n",
       "Name: title, dtype: object\n"
      ]
     }
    ],
    "source": [
-    "print(get_recommendations_new(\"PK\"))"
+    "print(get_recommendations_new(\"Breaking bad\"))"
    ]
   },
   {
