some shit update

--- a/netflix.ipynb
+++ b/netflix.ipynb
@@ -26,7 +26,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn.feature_extraction.text import CountVectorizer"
    ],
    "cell_type": "code",
@@ -133,14 +132,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_data(x):\n",
+    "        x=str(x)\n",
     "        return str.lower(x.replace(\" \", \"\"))\n",
     "def create_soup(x):\n",
-    "    return x['title']+ ' ' + x['director'] + ' ' + x['cast'] + ' ' +x['listed_in']+' '+ x['description']"
+    "    return x['title']+ ' ' + x['director'] + ' ' + x['cast'] + ' ' +x['listed_in']+' '+ x['description']+' '+x[\"type\"]+\" \"+x[\"rating\"]"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features=['title','director','cast','listed_in','description']\n",
+    "features=['title','director','cast','listed_in','description',\"type\",\"rating\"]\n",
     "filledna=filledna[features]"
    ]
   },
@@ -170,11 +170,11 @@
        "0  internationaltvshows,tvdramas,tvsci-fi&fantasy   \n",
        "1                      dramas,internationalmovies   \n",
        "\n",
-       "                                         description  \n",
-       "0  inafuturewheretheeliteinhabitanislandparadisef...  \n",
-       "1  afteradevastatingearthquakehitsmexicocity,trap...  "
+       "                                         description    type rating  \n",
+       "0  inafuturewheretheeliteinhabitanislandparadisef...  tvshow  tv-ma  \n",
+       "1  afteradevastatingearthquakehitsmexicocity,trap...   movie  tv-ma  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>director</th>\n      <th>cast</th>\n      <th>listed_in</th>\n      <th>description</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>3%</td>\n      <td></td>\n      <td>joãomiguel,biancacomparato,michelgomes,rodolfo...</td>\n      <td>internationaltvshows,tvdramas,tvsci-fi&amp;fantasy</td>\n      <td>inafuturewheretheeliteinhabitanislandparadisef...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>7:19</td>\n      <td>jorgemichelgrau</td>\n      <td>demiánbichir,héctorbonilla,oscarserrano,azalia...</td>\n      <td>dramas,internationalmovies</td>\n      <td>afteradevastatingearthquakehitsmexicocity,trap...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>director</th>\n      <th>cast</th>\n      <th>listed_in</th>\n      <th>description</th>\n      <th>type</th>\n      <th>rating</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>3%</td>\n      <td></td>\n      <td>joãomiguel,biancacomparato,michelgomes,rodolfo...</td>\n      <td>internationaltvshows,tvdramas,tvsci-fi&amp;fantasy</td>\n      <td>inafuturewheretheeliteinhabitanislandparadisef...</td>\n      <td>tvshow</td>\n      <td>tv-ma</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>7:19</td>\n      <td>jorgemichelgrau</td>\n      <td>demiánbichir,héctorbonilla,oscarserrano,azalia...</td>\n      <td>dramas,internationalmovies</td>\n      <td>afteradevastatingearthquakehitsmexicocity,trap...</td>\n      <td>movie</td>\n      <td>tv-ma</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "execution_count": 6
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -204,18 +204,18 @@
        "0  internationaltvshows,tvdramas,tvsci-fi&fantasy   \n",
        "1                      dramas,internationalmovies   \n",
        "\n",
-       "                                         description  \\\n",
-       "0  inafuturewheretheeliteinhabitanislandparadisef...   \n",
-       "1  afteradevastatingearthquakehitsmexicocity,trap...   \n",
+       "                                         description    type rating  \\\n",
+       "0  inafuturewheretheeliteinhabitanislandparadisef...  tvshow  tv-ma   \n",
+       "1  afteradevastatingearthquakehitsmexicocity,trap...   movie  tv-ma   \n",
        "\n",
        "                                                soup  \n",
        "0  3%  joãomiguel,biancacomparato,michelgomes,rod...  \n",
        "1  7:19 jorgemichelgrau demiánbichir,héctorbonill...  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>director</th>\n      <th>cast</th>\n      <th>listed_in</th>\n      <th>description</th>\n      <th>soup</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>3%</td>\n      <td></td>\n      <td>joãomiguel,biancacomparato,michelgomes,rodolfo...</td>\n      <td>internationaltvshows,tvdramas,tvsci-fi&amp;fantasy</td>\n      <td>inafuturewheretheeliteinhabitanislandparadisef...</td>\n      <td>3%  joãomiguel,biancacomparato,michelgomes,rod...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>7:19</td>\n      <td>jorgemichelgrau</td>\n      <td>demiánbichir,héctorbonilla,oscarserrano,azalia...</td>\n      <td>dramas,internationalmovies</td>\n      <td>afteradevastatingearthquakehitsmexicocity,trap...</td>\n      <td>7:19 jorgemichelgrau demiánbichir,héctorbonill...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>director</th>\n      <th>cast</th>\n      <th>listed_in</th>\n      <th>description</th>\n      <th>type</th>\n      <th>rating</th>\n      <th>soup</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>3%</td>\n      <td></td>\n      <td>joãomiguel,biancacomparato,michelgomes,rodolfo...</td>\n      <td>internationaltvshows,tvdramas,tvsci-fi&amp;fantasy</td>\n      <td>inafuturewheretheeliteinhabitanislandparadisef...</td>\n      <td>tvshow</td>\n      <td>tv-ma</td>\n      <td>3%  joãomiguel,biancacomparato,michelgomes,rod...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>7:19</td>\n      <td>jorgemichelgrau</td>\n      <td>demiánbichir,héctorbonilla,oscarserrano,azalia...</td>\n      <td>dramas,internationalmovies</td>\n      <td>afteradevastatingearthquakehitsmexicocity,trap...</td>\n      <td>movie</td>\n      <td>tv-ma</td>\n      <td>7:19 jorgemichelgrau demiánbichir,héctorbonill...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 9
     }
    ],
    "source": [
@@ -225,59 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from annoy import AnnoyIndex\n",
-    "\n",
-    "count = CountVectorizer(stop_words='english')\n",
-    "count_matrix = count.fit_transform(filledna['soup'])\n",
-    "count_matrix=count_matrix.toarray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filledna=filledna.reset_index()\n",
-    "indices = pd.Series(filledna.index, index=filledna['title'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[0 0 0 ... 0 0 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(count_matrix[2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "f= len(count_matrix)\n",
-    "print(f)\n",
-    "t = AnnoyIndex(68313, 'angular')\n",
-    "for i in range(f):\n",
-    "    t.add_item(i,count_matrix[i])\n",
-    "t.build(100,n_jobs=-1)\n",
-    "t.save('annoy100.ann')\n",
-    "print(\"done\")"
+    "from sklearn.feature_extraction.text import CountVectorizer,TfidfVectorizer\n",
+    "from annoy import AnnoyIndex\n",
+    "\n",
+    "count = TfidfVectorizer(stop_words='english')\n",
+    "count_matrix = count.fit_transform(filledna['soup'])\n",
+    "count_matrix=count_matrix.toarray()"
    ]
   },
   {
@@ -286,16 +243,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_recommendations_new(title):\n",
-    "    \n",
-    "    title=title.replace(' ','').lower()\n",
-    "    idx = indices[title]\n",
-    "    print(idx)\n",
-    "    # Get the pairwsie similarity scores of all movies with that movie\n",
-    "    u = AnnoyIndex(68313, 'angular')\n",
-    "    u.load('annoy100.ann') # super fast, will just mmap the file\n",
-    "    similar=u.get_nns_by_item(idx, 10)\n",
-    "    return netflix['title'].iloc[similar]"
+    "filledna=filledna.reset_index()\n",
+    "indices = pd.Series(filledna.index, index=filledna['title'])"
    ]
   },
   {
@@ -307,23 +256,83 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1089\n",
-      "1089                           Breaking Bad\n",
-      "858                        Better Call Saul\n",
-      "6096    The Assassination of Gianni Versace\n",
-      "4716                                  Ozark\n",
-      "6140                          The Blacklist\n",
-      "1608                                Dare Me\n",
-      "1711                    Designated Survivor\n",
-      "6607           The Lizzie Borden Chronicles\n",
-      "7360                               Unsolved\n",
-      "3289                              Kakegurui\n",
+      "[0. 0. 0. ... 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(count_matrix[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "7787\n",
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "f= len(count_matrix)\n",
+    "print(f)\n",
+    "t = AnnoyIndex(68322, 'angular')\n",
+    "for i in range(f):\n",
+    "    t.add_item(i,count_matrix[i])\n",
+    "t.build(100,n_jobs=-1)\n",
+    "t.save('annoy100.ann')\n",
+    "print(\"done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_recommendations_new(title):\n",
+    "    \n",
+    "    title=title.replace(' ','').lower()\n",
+    "    idx = indices[title]\n",
+    "    print(idx)\n",
+    "    # Get the pairwsie similarity scores of all movies with that movie\n",
+    "    u = AnnoyIndex(68322, 'angular')\n",
+    "    u.load('annoy100.ann') # super fast, will just mmap the file\n",
+    "    similar=u.get_nns_by_item(idx, 10)\n",
+    "    return netflix['title'].iloc[similar]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1025\n",
+      "1025                                      BoJack Horseman\n",
+      "1026    BoJack Horseman Christmas Special: Sabrina's C...\n",
+      "7450                                       W/ Bob & David\n",
+      "621                    Aunty Donna's Big Ol' House of Fun\n",
+      "6491                                       The Informant!\n",
+      "6316            The Drunk and on Drugs Happy Funtime Hour\n",
+      "4760                                        Paquita Salas\n",
+      "1966                                           El testigo\n",
+      "5669                                       Slobby's World\n",
+      "6830    The Road to El Camino: Behind the Scenes of El...\n",
       "Name: title, dtype: object\n"
      ]
     }
    ],
    "source": [
-    "print(get_recommendations_new(\"Breaking bad\"))"
+    "print(get_recommendations_new(\"Bojack Horseman\"))"
    ]
   },
   {
